--- a/PL-BlutBad/public/css/froot-wars.css
+++ b/PL-BlutBad/public/css/froot-wars.css
@@ -1,5 +1,5 @@
 #gameFrootcontainer {
-    margin:1cm;
+    margin: 5% 22%;
     width:640px;
     height:480px;
     background: url(/images/splashscreen.png);
