--- a/PL-BlutBad/client/templates/juegos-t.html
+++ b/PL-BlutBad/client/templates/juegos-t.html
@@ -8,13 +8,13 @@
 					<div class="gallery-item">
 						<h3>{{name}}</h3>
 						<img src="{{logo_src}}" class="gallery-image" alt="{{logo_alt}}" />
-						{{#if editar}}
-							<input type="button" class="edit_game" class="btn cancel" value="Editar el info del juego">
-						{{/if}}
 						<div class="gallery-description">
 							<h5>{{title_desc}}</h5>
 							<p>{{description}}</p>
-						</div>			
+						</div>	
+						{{#if editar}}
+							<input type="button" class="edit_game" value="Editar el juego">
+						{{/if}}		
 						{{#if showEditGame}}
 				  			{{> editGame}}
 						{{/if}}
