Depurando código y modificando más estilos

--- a/PL-BlutBad/client/templates/ranking-t.html
+++ b/PL-BlutBad/client/templates/ranking-t.html
@@ -3,7 +3,7 @@
 		<h1>Ranking</h1> 
 		<div class="container_ranking">
 			<div class="game_filter">
-				<h3>Filtrar ranking por juegos!</h3>
+				<h3>Ranking del juego</h3>
 				<ul class="sub-navigation">
 					{{#each juegos}}
 						<li class = "sortBy"><a href="#" class="{{_id}}">{{name}}</a></li> 
@@ -13,7 +13,6 @@
 			</div> 
 			
 			<div id = "ranking_container">
-
 				<div class="btn-toolbar">
 				    <button class="btn btn-primary fakeRanking">Fake Ranking</button>
 				    <button class="btn">Boton Funcional 3</button>
