--- a/PL-BlutBad/client/templates/torneos-t.html
+++ b/PL-BlutBad/client/templates/torneos-t.html
@@ -64,8 +64,8 @@
                     {{/each}}
                 </div>
             </div> 
-		{{#if showEditChamp}}
-			{{> editChamp}}
+		{{#if showEditTorn}}
+			{{> editTor}}
 		{{/if}} 
         </div>
 	{{/if}}
@@ -129,42 +129,4 @@
         </div>
     </div>
   {{/with}}
-</template>
-
-
-
-
-<template name="editChamp">
-    {{#with champ}}
-        <div class="mask"> </div>
-            <div class="modal">
-                <div class="modal-header">
-                    <button type="button" class="close cancel">&times;</button>
-                    <h3>Add Championship</h3>
-                </div>        
-                <div class="modal-body">
-                    {{#if error}}
-                        <div class="alert alert-error">{{error}}</div>
-                    {{/if}}
-                    <p>Title <input type="text" id="title" class="title span5" value="{{title}}"></p>
-                    <p>Juego: 
-                        <select id="game" name="Juego">
-                            <option selected value="elige">{{game}}</option>
-                            {{#each juegos}}
-                                    <option value="{{name}}">{{name}}</option>  
-                            {{/each}}
-                        </select>
-                    </p>
-                    <p>Date Start: <input type="text" id="date_start" value="{{date_start}}"></p>
-                    <p>Date Finish: <input type="text" id="date_finish" value="{{date_finish}}"></p>
-                    <p>Description: <textarea id="description" class="description span5">{{description}}</textarea> </p>
-                    <p>URL Imagen: <input type="text" id="pic" value="{{pic}}"></p>
-                </div>
-                <div class="modal-footer">
-                    <a href="#" class="btn cancel">Cancel</a>
-                    <a href="#" class="btn btn-primary save">Save</a>
-                </div>
-            </div>
-        </div>
-    {{/with}}
 </template>
