Muestra el nombre de los juegos por su id en torneos; Cambio de la lógica de torneos en la bd por defecto (userid y gameid en vez de sus nombres) por lo que hay que resetear la bd mongo mediante: db.dropDatabase(); Falta mejorar el helper de getusername para que pueda extraer el nombre de un user registrado sin redes sociales (por lo que no se muestra el nombre del creador del torneo de momento); Estilos modificados de los canvas de juegos

--- a/PL-BlutBad/client/templates/juegos-t.html
+++ b/PL-BlutBad/client/templates/juegos-t.html
@@ -18,7 +18,7 @@
 			  			{{> editGame}}
 					{{/if}}
 		  		</div>
-			{{/each}} 
+			{{/each}}
 		</div>
 	{{/if}} 
 </template>
@@ -62,62 +62,55 @@
 
 <template name="idnFroot"> 
 	<div id="gameFrootcontainer" class="span7">
-
 		<canvas id="gameFrootcanvas" width="640" height="480" class="gameFrootlayer"> </canvas>
-		  <div id="scorescreen" class="gameFrootlayer">
+		<div id="scorescreen" class="gameFrootlayer">
 			<img id="togglemusic" src="/images/icons/sound.png" onclick="gameFroot.toggleBackgroundMusic();">
 			<img src="/images/icons/prev.png" onclick="gameFroot.restartLevel();">
 			<span id="score">Score: 0</span>
-		  </div>
-		  
-		  <div id="gameFrootstartscreen" class="gameFrootlayer">
+		</div>
+	  
+		<div id="gameFrootstartscreen" class="gameFrootlayer">
 			<img src="/images/icons/play.png" alt="Play gameFroot" onclick = "gameFroot.showLevelScreen();"><br>
 			<img src="/images/icons/settings.png" alt="Settings">
-		  </div>
-		  
-		  <div id="levelselectscreen" class="gameFrootlayer">
-		  </div>
-		  
-		  <div id="loadingscreen" class="gameFrootlayer">
+		</div>
+	  
+		<div id="levelselectscreen" class="gameFrootlayer"></div>
+	  
+		<div id="loadingscreen" class="gameFrootlayer">
 			<div id="loadingmessage"></div>
-		  </div>
-		  
-		  <div id="endingscreen" class="gameFrootlayer">
-			<div>
-			  <p id="endingmessage">The Level Is Over Message</p>
-			  <p id="playcurrentlevel" onclick="gameFroot.restartLevel();"><img src="/images/icons/prev.png"> Replay Current Level</p>
-			  <p id="playnextlevel" onclick="gameFroot.startNextLevel();"><img src="/images/icons/next.png"> Play Next Level </p> 
-			  
-			  <p id="returntolevelscreen"onclick="gameFroot.showLevelScreen();"><img src="/images/icons/return.png"> Return to Level Screen</p>
-			</div>
-	</div> 
-	 
+		</div>
+	  
+		<div id="endingscreen" class="gameFrootlayer"><div>
+			<p id="endingmessage">The Level Is Over Message</p>
+			<p id="playcurrentlevel" onclick="gameFroot.restartLevel();"><img src="/images/icons/prev.png"> Replay Current Level</p>
+			<p id="playnextlevel" onclick="gameFroot.startNextLevel();"><img src="/images/icons/next.png"> Play Next Level </p> 
+
+			<p id="returntolevelscreen"onclick="gameFroot.showLevelScreen();"><img src="/images/icons/return.png"> Return to Level Screen</p>
+		</div>
+	</div> 	 
 </template>
 
 
 <template name="editGame">
-  {{#with game}}
-	<div class="mask"> </div>
-		<div class="modal">
-		
-		  <div class="modal-header">
-			<button type="button" class="close cancel">&times;</button>
-			<h3>Editar el juego</h3>
-		  </div>   
-			   
-		  <div class="modal-body">
-			<label>Nombre: <br><input type="text" id="name" class="title span5" value={{name}}></label>
-			<label>Título de la descripción: <br><input type="text" id="title_desc"  value={{title_desc}}></label>
-			<label>Descripción: </label> <textarea id="description" class="description span5">{{description}}</textarea> 
-			<label>URL de la imagen: <input type="text" id="logo_src" class="title span5" value="{{logo_src}}"><br></label>
-			<label>Init Function: <input type="text" id="wrapf" class="title span5" value="{{wrapf}}"><br></label>
-		  </div>
-		  
-		  <div class="modal-footer">
-			<a href="#" class="btn cancel">Cancelar</a>
-			<a href="#" class="btn btn-primary save">Salvar</a>
-		  </div>
+	{{#with game}}
+		<div class="mask"> </div>
+			<div class="modal">		
+			  	<div class="modal-header">
+					<button type="button" class="close cancel">&times;</button>
+					<h3>Editar el juego</h3>
+			  	</div>   			   
+			  	<div class="modal-body">
+					<label>Nombre: <br><input type="text" id="name" class="title span5" value={{name}}></label>
+					<label>Título de la descripción: <br><input type="text" id="title_desc"  value={{title_desc}}></label>
+					<label>Descripción: </label> <textarea id="description" class="description span5">{{description}}</textarea> 
+					<label>URL de la imagen: <input type="text" id="logo_src" class="title span5" value="{{logo_src}}"><br></label>
+					<label>Init Function: <input type="text" id="wrapf" class="title span5" value="{{wrapf}}"><br></label>
+			  	</div>		  
+			  	<div class="modal-footer">
+					<a href="#" class="btn cancel">Cancelar</a>
+					<a href="#" class="btn btn-primary save">Salvar</a>
+			  	</div>
+			</div>
 		</div>
-	</div>
-  {{/with}}
+  	{{/with}}
 </template>
