arreglado lo del email

--- a/PL-BlutBad/client/templates/profile.html
+++ b/PL-BlutBad/client/templates/profile.html
@@ -8,7 +8,7 @@
 					Nombre: <input class="form-control" id="nombre" value="{{getUsername getUserId}}" type="text" required/>
 					 </label>
 					 <label>
-           			Email: <input class="form-control" name="youremail" value="{{getUserEmail getUserId}}" type="email" required/>
+           			Email: <input class="form-control" id="email" value="{{getUserEmail getUserId}}" type="email" required/>
            			</label>
             		<!--<input class="form-control" name="password" placeholder="New Password" type="password" />-->
             		Fecha de nacimiento: <input type="text" id="datebirth" value="{{getUserDateBirth getUserId}}">
