Areglar chapuza de showTorneo

--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -3,6 +3,8 @@
 
 
 <template name="hall_torneo">
+
+{{#if show}}
 Mostrar torneo: -> {{torneoId}}
 
 
@@ -133,4 +135,6 @@ Mostrar torneo: -> {{torneoId}}
         </div>
     </div>
 </div>
+
+{{/if}}
 </template>
