--- a/PL-BlutBad/client/templates/hall-clarcassone-t.html
+++ b/PL-BlutBad/client/templates/hall-clarcassone-t.html
@@ -50,7 +50,7 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
                 <tr>
                   <td>{{getUsername this.user_id}}</td>
                   <td>{{userRango this.user_id}}</td>
-                  <td>{{rol this.user_id}}</td>
+                  <td>{{rol this.user_id ../this._id}}</td>
                   <td><span class="{{estadoUser this.estado}}">{{this.estado}}</span>
                   </td>                                       
                 </tr>
