--- a/PL-BlutBad/client/templates/hall-clarcassone-t.html
+++ b/PL-BlutBad/client/templates/hall-clarcassone-t.html
@@ -58,7 +58,9 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
             </tbody>
           </table>
           <div class="btn-toolbar">
-    		    <button class="btn unirme">{{unir_aband this._id}}</button>
+            {{#if show_ab this._id}}
+    		      <button class="btn unirme">{{unir_aband this._id}}</button>
+            {{/if}}
     		    <button class="btn ready">{{estadoUserAct this._id}}</button>
             <button id = "{{muestro_oculto this._id}}" class="btn startparty">Empezar</button>
             <button id = "{{muestro_oculto this._id}}" class="btn removeparty">Descartar</button>
