Ocultar los botones de cada partidavolátil, ocultar botón crear torneo, ocultar botones opciones de cada torneo, para usuarios NO LOGUEADOS en la plataforma

--- a/PL-BlutBad/client/templates/hall-clarcassone-t.html
+++ b/PL-BlutBad/client/templates/hall-clarcassone-t.html
@@ -57,14 +57,16 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
               {{/each}}           
             </tbody>
           </table>
-          <div class="btn-toolbar">
-            {{#if show_ab this._id}}
-    		      <button class="btn unirme">{{unir_aband this._id}}</button>
-            {{/if}}
-    		    <button class="btn ready">{{estadoUserAct this._id}}</button>
-            <button id = "{{muestro_oculto this._id}}" class="btn startparty">Empezar</button>
-            <button id = "{{muestro_oculto this._id}}" class="btn removeparty">Descartar</button>
-	        </div>
+          {{#if currentUser}}
+            <div class="btn-toolbar">
+              {{#if show_ab this._id}}
+      		      <button class="btn unirme">{{unir_aband this._id}}</button>
+              {{/if}}
+      		    <button class="btn ready">{{estadoUserAct this._id}}</button>
+              <button id = "{{muestro_oculto this._id}}" class="btn startparty">Empezar</button>
+              <button id = "{{muestro_oculto this._id}}" class="btn removeparty">Descartar</button>
+  	        </div>
+          {{/if}}
         {{/each}}
       </div>            
     </div>
