--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -1,140 +1,214 @@
-
-
-
-
 <template name="hall_torneo">
 
 {{#if show}}
-Mostrar torneo: -> {{torneoId}}
+    Mostrar torneo: -> {{torneoId}}
 
 
-<div class="span8">
-    <h1>Alice in Wonderland, part dos</h1>
-    <p>'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the Gryphon said to the Mock Turtle, 'Drive on, old fellow! Don't be all day about it!' and he went on in these words:
-    'Yes, we went to school in the sea, though you mayn't believe it—'
-    'I never said I didn't!' interrupted Alice.
-    'You did,' said the Mock Turtle.</p>
-    <div>
-        <span class="badge badge-success">Posted 2012-08-02 20:47:04</span><div class="pull-right"><span class="label">alice</span> <span class="label">story</span> <span class="label">blog</span> <span class="label">personal</span></div>
-    </div> 
-    <hr>
-    <h1>Revolution has begun!</h1>
-    <p>'I am bound to Tahiti for more men.'
-        'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
-        'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to beach this boat on yonder island, and remain there six days. If I do not, may lightning strike me!'A pretty scholar,' laughed the Lakeman. 'Adios, Senor!' and leaping into the sea, he swam back to his comrades.</p>
-    <div>
-        <span class="badge badge-success">Posted 2012-08-02 20:47:04</span><div class="pull-right"><span class="label">alice</span> <span class="label">story</span> <span class="label">blog</span> <span class="label">personal</span></div>
-    </div>     
-    <hr>
-</div>
+    {{#with torneo}}
 
 
 
-
-
-<div class="container">
-    <div class="row">
-        <div class="span12">
-            <p class="lead">Bare minimum radio button tabs example:</p>
-            <div id="tab" class="btn-group" data-toggle="buttons-radio">
-              <a href="#prices" class="btn active" data-toggle="tab">Prices</a>
-              <a href="#features" class="btn" data-toggle="tab">Features</a>
-              <a href="#requests" class="btn" data-toggle="tab">Requests</a>
-              <a href="#contact" class="btn"  data-toggle="tab">Contact</a>
+    <div class="span8">
+        <h1> {{title}} </h1>
+            <div class="span4">
+                <img src="{{pic}}">  
             </div>
-             
-            <div class="tab-content">
-              <div class="tab-pane active" id="prices">Prices content</div>
-              <div class="tab-pane" id="features">Features Content</div>
-              <div class="tab-pane" id="requests">Requests Content</div>
-              <div class="tab-pane" id="contact">Contact Content</div>
-            </div>
-             
-             
             <hr>
-             
-            <p class="lead">More complex content example:</p>
-            <div id="tab" class="btn-group" data-toggle="buttons-radio">
-              <a href="#prices2" class="btn btn-large btn-info active" data-toggle="tab">Prices</a>
-              <a href="#features2" class="btn btn-large btn-info" data-toggle="tab">Features</a>
-              <a href="#requests2" class="btn btn-large btn-info" data-toggle="tab">Requests</a>
-              <a href="#contact2" class="btn btn-large btn-info"  data-toggle="tab">Contact</a>
-            </div>
-             
-            <div class="tab-content">
-              <div class="tab-pane active" id="prices2">
-                <br>
-                <p class="lead">Prices content</p>
-                <div class="row">
-                    <div class="span3">
-                      <img src="http://placehold.it/200x200">  
-                    </div>
-                    <div class="span9">
-                      <p>There are now two rates of Capital Gains Tax (CGT) for individuals. A standard rate of 18% and a higher rate of 28%. The annual exempt amount is still £10,100 for ’10-’11. For more information on CGT please see the factsheet we have put together, which is available to download below.</p> 
-                    </div>
+        <p>{{description_long}}</p>
+        <div>
+            <span class="badge badge-success">Empieza: {{date_start}}</span><span class="badge badge-important">Termina: {{date_finish}}</span> <div class="pull-right"><span class="{{participoClass}}">Participantes: {{numParticip}}</span></div>
+        </div> 
+        <hr>
+       
+    </div>
+    {{/with}}
+
+
+
+
+
+    
+    {{#if multiTorneo}}
+    
+    
+    
+    <div class="container">
+        <div class="row">        
+                <p class="lead">More complex content example:</p>
+                <div id="tab" class="btn-group" data-toggle="buttons-radio">
+                  <a href="#prices2" class="btn btn-large btn-info active" data-toggle="tab">Preseleccion</a>
+                  <a href="#features2" class="btn btn-large btn-info" data-toggle="tab">1/4 Final</a>
+                  <a href="#requests2" class="btn btn-large btn-info" data-toggle="tab">SemiFinal</a>
+                  <a href="#contact2" class="btn btn-large btn-info"  data-toggle="tab">Final</a>
                 </div>
-              </div>
-              <div class="tab-pane" id="features2">
-                    <br>
-                <p class="lead">Features content</p>
-                <div class="row">
-                    <div class="span6">
-                      <p>For a full list of our services including support and consultancy for start-up businesses please see the Our Services section of the website. Alternatively if you have a specific service or question in mind please don’t hesitate to contact us to discuss this using the contact details on the Contact Us page of the site.</p> 
-                    </div>
-                    <div class="span6">
-                      <img src="http://placehold.it/400x400">  
-                    </div>
-                </div>
-              </div>
-              <div class="tab-pane" id="requests2">
-                    <br>
-                <p class="lead">Requests content</p>
-                <div class="row">
-                    <div class="span3">
-                      <img src="http://placehold.it/200x200">  
-                    </div>
-                    <div class="span5">
-                      <p>There are now two rates of Capital Gains Tax (CGT) for individuals. A standard rate of 18% and a higher rate of 28%. The annual exempt amount is still £10,100 for ’10-’11. For more information on CGT please see the factsheet we have put together, which is available to download below.</p> 
-                    </div>
-                    <div class="span4">
-                      <img src="http://placehold.it/400x200">  
-                    </div>
-                </div>
-              </div>
-              <div class="tab-pane" id="contact2">
-                    <br>
-                <p class="lead">Contact Us</p>
-                <form class="well span8">
-                  <div class="row">
-                        <div class="span3">
-                            <label>First Name</label>
-                            <input type="text" class="span3" placeholder="Your First Name">
-                            <label>Last Name</label>
-                            <input type="text" class="span3" placeholder="Your Last Name">
-                            <label>Email Address</label>
-                            <input type="text" class="span3" placeholder="Your email address">
-                            <label>Subject
-                            <select id="subject" name="subject" class="span3">
-                                <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
-                                <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
-                            </select>
-                            </label>
-                        </div>
-                        <div class="span5">
-                            <label>Message</label>
-                            <textarea name="message" id="message" class="input-xlarge span5" rows="10"></textarea>
-                        </div>
-                    
-                        <button type="submit" class="btn btn-primary pull-right">Send</button>
-                    </div>
-                </form>
-              </div>
-            </div>
+            
         </div>
     </div>
-</div>
+    
+    
+    
+    <div class="container">
+        <div class="row">
+            <div class="span5">
+                <table class="table table-striped table-condensed">
+                      <thead>
+                      <tr>
+                          <th>#</th>
+                          <th>Partida</th>
+                          <th>Ganador</th>                                        
+                      </tr>
+                  </thead>   
+                  <tbody>
+                    <tr>
+                        <td>Nº 1</td>
+                     
+                        <td>
+                            <div class="span5">
+                                <table class="table table-striped table-condensed">
+                                      <thead>
+                                      <tr>
+                                          <th>Username</th>
+                                          <th>Date registered</th>
+                                          <th>Role</th>
+                                          <th>Status</th>                                          
+                                      </tr>
+                                  </thead>   
+                                  <tbody>
+                                    <tr>
+                                        <td>Donna R. Folse</td>
+                                        <td>2012/05/06</td>
+                                        <td>Editor</td>
+                                        <td><span class="label label-success">Active</span>
+                                        </td>                                       
+                                    </tr>
+                                    
+                                    
+                                    <tr>
+                                        <td>Donna R. Folse</td>
+                                        <td>2012/05/06</td>
+                                        <td>Editor</td>
+                                        <td><span class="label label-success">Active</span>
+                                        </td>                                       
+                                    </tr>
+                                    
+                                    
+                                    <tr>
+                                        <td>Donna R. Folse</td>
+                                        <td>2012/05/06</td>
+                                        <td>Editor</td>
+                                        <td><span class="label label-success">Active</span>
+                                        </td>                                       
+                                    </tr>
+                                    
+                                   </tbody>
+                                 </table>
+                              </div>
+                        </td>
+        
+                       <td><span class="label label-success">Donna R. Folse</span>
+                                                       
+                    </tr>
+                    
+                                    <tr>
+                        <td>Nº 2</td>
+                     
+                        <td>
+                            <div class="span5">
+                                <table class="table table-striped table-condensed">
+                                      <thead>
+                                      <tr>
+                                          <th>Username</th>
+                                          <th>Date registered</th>
+                                          <th>Role</th>
+                                          <th>Status</th>                                          
+                                      </tr>
+                                  </thead>   
+                                  <tbody>
+                                    <tr>
+                                        <td>Donna R. Folse</td>
+                                        <td>2012/05/06</td>
+                                        <td>Editor</td>
+                                        <td><span class="label label-success">Active</span>
+                                        </td>                                       
+                                    </tr>
+                                    
+                                    
+                                    <tr>
+                                        <td>Donna R. Folse</td>
+                                        <td>2012/05/06</td>
+                                        <td>Editor</td>
+                                        <td><span class="label label-success">Active</span>
+                                        </td>                                       
+                                    </tr>
+                                    
+                                    
+                                    <tr>
+                                        <td>Donna R. Folse</td>
+                                        <td>2012/05/06</td>
+                                        <td>Editor</td>
+                                        <td><span class="label label-success">Active</span>
+                                        </td>                                       
+                                    </tr>
+                                    
+                                   </tbody>
+                                 </table>
+                              </div>
+                        </td>
+        
+                       <td><span class="label label-success">Donna R. Folse</span>
+                                                       
+                    </tr>
+                                 
+                  </tbody>
+                </table>
+                </div>
+        </div>
+    </div>
+    
+    
+    {{/if}}
 
+
+    {{#if soloTorneo}}
+    
+    <table class="table table-striped table-condensed">
+                                      <thead>
+                                      <tr>
+                                          <th>Username</th>
+                                          <th>Date registered</th>
+                                          <th>Role</th>
+                                          <th>Status</th>                                          
+                                      </tr>
+                                  </thead>   
+                                  <tbody>
+                                    <tr>
+                                        <td>Donna R. Folse</td>
+                                        <td>2012/05/06</td>
+                                        <td>Editor</td>
+                                        <td><span class="label label-success">Active</span>
+                                        </td>                                       
+                                    </tr>
+                                    
+                                    
+                                    <tr>
+                                        <td>Donna R. Folse</td>
+                                        <td>2012/05/06</td>
+                                        <td>Editor</td>
+                                        <td><span class="label label-success">Active</span>
+                                        </td>                                       
+                                    </tr>
+                                    
+                                    
+                                    <tr>
+                                        <td>Donna R. Folse</td>
+                                        <td>2012/05/06</td>
+                                        <td>Editor</td>
+                                        <td><span class="label label-success">Active</span>
+                                        </td>                                       
+                                    </tr>
+                                    
+                                   </tbody>
+                                 </table>
+    {{/if}}
 {{/if}}
 </template>
