--- a/PL-BlutBad/client/templates/torneos-t.html
+++ b/PL-BlutBad/client/templates/torneos-t.html
@@ -39,12 +39,12 @@
                                 <p>{{description}}</p>
                                 
                                 {{#if currentUser}}
-                                    <input type="button"  class="empezarTorneo" value="Empezar Torneo">
-                                    <input type="button"  class="finalizarTorneo" value="Finalizar Torneo"> 
+                                    {{#if current_creator _id}}
+                                        <input type="button"  class="empezarTorneo" value="Empezar Torneo">
+                                        <input type="button"  class="finalizarTorneo" value="Finalizar Torneo">  
                                     <!-- 
                                     <input type="button" id="{{_id}}" class = "participantes" value="{{participantes _id}}">
                                     -->
-                                    {{#if editar}}
                                         <input type="button" id="{{_id}}" class="editar" value="Editar torneo">
                                     {{/if}}                                    
                                     <input type="button" id="{{_id}}" class = "{{clase_Apuntada _id getUserId}}" value="{{apunto _id getUserId}} {{participantes _id}}">
