Añadida funcionalidad para que el creador de un torneo pueda borrarlo

--- a/PL-BlutBad/client/templates/torneos-t.html
+++ b/PL-BlutBad/client/templates/torneos-t.html
@@ -46,6 +46,7 @@
                                     <input type="button" id="{{_id}}" class = "participantes" value="{{participantes _id}}">
                                     -->
                                         <input type="button" id="{{_id}}" class="editar" value="Editar torneo">
+                                        <input type="button" id="{{_id}}" class="borrar_tor" value="Borrar torneo">
                                     {{/if}}                                    
                                     <input type="button" id="{{_id}}" class = "{{clase_Apuntada _id getUserId}}" value="{{apunto _id getUserId}} {{participantes _id}}">
                                 {{else}}
