Eliminación por completo de la bd champuser ya que los participantes se han añadido como un campo más en colección de torneos; Readaptación del código torneos.js respecto a este cambio

--- a/PL-BlutBad/client/templates/torneos-t.html
+++ b/PL-BlutBad/client/templates/torneos-t.html
@@ -46,7 +46,7 @@
                                         <input type="button" id="{{_id}}" class="editar" value="Editar torneo">
                                         <input type="button" id="{{_id}}" class="borrar_tor" value="Borrar torneo">
                                     {{/if}}                                    
-                                   
+                                    <input type="button" id="{{_id}}" class = "{{clase_Apuntada _id getUserId}}" value="{{apunto _id getUserId}} {{participantes _id}}">
                                 {{else}}
                                     <i>Sign in para ver opciones de torneos</i>  
                                 {{/if}} 
